plugins {
    id 'application'
    id 'eclipse'
    id 'com.diffplug.eclipse.apt'
    id 'com.google.cloud.tools.jib' version '3.3.2'
}

mainClassName = 'io.netlibs.ami.pump.Main'


jib {
  from {
    // or open9...
    image = 'eclipse-temurin:17-jre' 
  }
  container {
    jvmFlags = [ '--illegal-access=permit', '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED' ]
    format = 'Docker'
  }
  to {
    auth {
      username = System.getenv('GITHUB_ACTOR') ?: ""
      password = System.getenv('GITHUB_TOKEN') ?: ""
    }
  }
}


apply from: "${rootDir}/gradle/eclipse.gradle"

repositories {
  mavenCentral()
}

eclipse.jdt.sourceCompatibility = 17
eclipse.jdt.targetCompatibility = 17

application {
  applicationDefaultJvmArgs = ['--illegal-access=permit', '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED']
}

dependencies {
 
  implementation platform('io.netty:netty-bom:4.1.93.Final')
  implementation platform('software.amazon.awssdk:bom:2.20.73')
  implementation platform('com.fasterxml.jackson:jackson-bom:2.15.1')
  implementation platform('io.micrometer:micrometer-bom:1.11.0')

  annotationProcessor 'org.immutables:value:2.9.3'
  compileOnly 'org.immutables:value-annotations:2.9.3'
  
  implementation 'software.amazon.awssdk:auth'
  implementation 'software.amazon.awssdk:sts'
  implementation 'software.amazon.awssdk:sns'
  implementation 'software.amazon.awssdk:kinesis'
  implementation 'software.amazon.awssdk:netty-nio-client'
  implementation 'software.amazon.kinesis:amazon-kinesis-client:2.5.0'
  
  implementation 'info.picocli:picocli:4.7.3'
    
  implementation ('net.openhft:chronicle-queue:5.24ea16') {
    exclude group: 'net.openhft', module: 'affinity'
  }
  
}

dependencies {
  implementation 'org.ini4j:ini4j:0.5.4'
  implementation 'com.fasterxml.jackson.core:jackson-annotations'
  implementation 'com.fasterxml.jackson.core:jackson-databind'
  implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
}

dependencies {
  implementation project(':client')
  implementation 'com.google.guava:guava:31.1-jre'  
  implementation 'io.micrometer:micrometer-core'
  implementation 'io.micrometer:micrometer-registry-statsd'

  implementation 'org.slf4j:slf4j-api:2.0.7'
  runtimeOnly 'org.slf4j:slf4j-simple:2.0.7'
}

dependencies {
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
}


